fixed charts for professor main page

--- a/app/views/profPage.scala.html
+++ b/app/views/profPage.scala.html
@@ -136,60 +136,221 @@
 		</script> -->
 		
 		<script>
-			$(function () {
-		        $('#container').highcharts({
+		$(function () {
+		    $(document).ready(function() {
+		        Highcharts.setOptions({
+		            global: {
+		                useUTC: false
+		            }
+		        });
+		    
+		        //websocket goes here
+		        var WS = window['MozWebSocket'] ? MozWebSocket : WebSocket
+				var chatSocket = new WS("@routes.Application.chat(username).webSocketURL(request)")
+			
+			    var sendMessage = function() {
+			        chatSocket.send(JSON.stringify(
+			            {text: $("#talk").val()}
+			        ))
+			        $("#talk").val('')
+			    }
+			
+			    var receiveEvent = function(event) {
+			        var data = JSON.parse(event.data)
+			
+			        // Handle errors
+			        if(data.error) {
+			            chatSocket.close()
+			            $("#onError span").text(data.error)
+			            $("#onError").show()
+			            return
+			        } else {
+			            $("#onChat").show()
+			        }
+		        
+		        var chart;
+		        $('#container-speed-chart').highcharts({
 		            chart: {
-		                type: 'area'
-		            },
-		            title: {
-		                text: 'Speed vote'
-		            },
-		            xAxis: {
-		                title: {
-		                    text: 'Time'  
-		                },
-		                allowDecimals: false,
-		                labels: {
-		                    formatter: function() {
-		                        return this.value; // clean, unformatted number for year
+		                type: 'spline',
+		                animation: Highcharts.svg, // don't animate in old IE
+		                marginRight: 5,
+		                events: {
+		                    load: function() {
+		    
+		                        // set up the updating of the chart each second
+		                        var series = this.series[0];
+		                        setInterval(function() {
+		                            var x = (new Date()).getTime(), // current time
+		                                y = Math.random()*100; //random data
+		                                y 
+		                            series.addPoint([x, y], true, true);
+		                        }, 2000);
 		                    }
 		                }
 		            },
+		            title: {
+		                text: 'Speed'
+		            },
+		            xAxis: {
+		                title: {
+		                    text: 'Time'
+		                },
+		                type: 'datetime',
+		                tickPixelInterval: 150
+		            },
+		            
 		            yAxis: {
 		                title: {
 		                    text: 'Percentage'
 		                },
-		                labels: {
+		                min: 0,
+		                max: 100,
+		                 labels: {
 		                    formatter: function() {
-		                        return this.value;
-		                    }
-		                }
-		            },
-		            tooltip: {
-		                pointFormat: 'At time: {point.x}. Average speed requested: {point.y:,.0f}'
-		            },
-		            plotOptions: {
-		                area: {
-		                    pointStart: 0,
-		                    marker: {
-		                        enabled: false,
-		                        symbol: 'circle',
-		                        radius: 1,
-		                        states: {
-		                            hover: {
-		                                enabled: true
-		                            }
+		                        if (this.value == 100) {
+		                            return 'Too Fast';
+		                        }
+		                        
+		                        if (this.value == 50) {
+		                            return 'OK';
+		                        }
+		                        
+		                        
+		                        if (this.value == 0) {
+		                            return 'Too Slow';
 		                        }
 		                    }
+		                },
+		            },
+		            tooltip: {
+		                formatter: function() {
+		                        return 'At time: ' + Highcharts.dateFormat('%H:%M:%S', this.x) +'<br/>' + 'Average speed requested ' + Highcharts.numberFormat(this.y, 2) + '%';
 		                }
 		            },
+		            legend: {
+		                enabled: false
+		            },
+		            exporting: {
+		                enabled: false
+		            },
 		            series: [{
-		                name: 'Speed',
-		                data: [40, 50, 60, 80, 30, 40, 50, 60 ]
+		                name: 'Random data',
+		                data: (function() {
+		                    // generate an array of random data
+		                    var data = [],
+		                        time = (new Date()).getTime(),
+		                        i;
+		    
+		                    for (i = -5; i <= 0; i++) {
+		                        data.push({
+		                            x: time + i * 1000,
+		                            y: 50
+		                        });
+		                    }
+		                    return data;
+		                })()
 		            }]
 		        });
 		    });
 		    
+		});
+    	</script>
+    
+    
+		<script>
+		$(function () {
+		    $(document).ready(function() {
+		        Highcharts.setOptions({
+		            global: {
+		                useUTC: false
+		            }
+		        });
+		    
+		        var chart;
+		        $('#container-loudness-chart').highcharts({
+		            chart: {
+		                type: 'spline',
+		                animation: Highcharts.svg, // don't animate in old IE
+		                marginRight: 5,
+		                events: {
+		                    load: function() {
+		    
+		                        // set up the updating of the chart each second
+		                        var series = this.series[0];
+		                        setInterval(function() {
+		                            var x = (new Date()).getTime(), // current time
+		                                y = Math.random()*100;
+		                            series.addPoint([x, y], true, true);
+		                        }, 2000);
+		                    }
+		                }
+		            },
+		            title: {
+		                text: 'Loudness'
+		            },
+		            xAxis: {
+		                title: {
+		                    text: 'Time'
+		                },
+		                type: 'datetime',
+		                tickPixelInterval: 150
+		            },
+		            
+		            yAxis: {
+		                title: {
+		                    text: 'Percentage'
+		                },
+		                min: 0,
+		                max: 100,
+		                 labels: {
+		                    formatter: function() {
+		                        if (this.value == 100) {
+		                            return 'Too Loud';
+		                        }
+		                        
+		                        if (this.value == 50) {
+		                            return 'OK';
+		                        }
+		                        
+		                        
+		                        if (this.value == 0) {
+		                            return 'Too Quiet';
+		                        }
+		                    }
+		                },
+		            },
+		            tooltip: {
+		                formatter: function() {
+		                        return 'At time: ' + Highcharts.dateFormat('%H:%M:%S', this.x) +'<br/>' + 'Average loudness requested ' + Highcharts.numberFormat(this.y, 2) + '%';
+		                }
+		            },
+		            legend: {
+		                enabled: false
+		            },
+		            exporting: {
+		                enabled: false
+		            },
+		            series: [{
+		                name: 'Random data',
+		                data: (function() {
+		                    // generate an array of random data
+		                    var data = [],
+		                        time = (new Date()).getTime(),
+		                        i;
+		    
+		                    for (i = -5; i <= 0; i++) {
+		                        data.push({
+		                            x: time + i * 1000,
+		                            y: 50 //initialization 
+		                        });
+		                    }
+		                    return data;
+		                })()
+		            }]
+		        });
+		    });
+		    
+		});
     	</script>
     
     	<script>
@@ -315,33 +476,26 @@
 		
     </head>
     <body>
-	<p>HIGHCHARTS GOES HERE</p>
 
 <table>
 	<thead>
 	<tr>
-		<th>
+		<th width=50% height=50%>
 			<script src="http://code.highcharts.com/highcharts.js"></script>
 			<script src="http://code.highcharts.com/modules/exporting.js"></script>
-			<div id="container"></div>
+			<div id="container-speed-chart"></div>
 		</th>
-		<th>
+		<th width=50%>
 			<script src="http://code.highcharts.com/highcharts.js"></script>
-			<script src="http://code.highcharts.com/highcharts-more.js"></script>
-			
-			<script src="http://code.highcharts.com/modules/solid-gauge.src.js"></script>
-			
-			<div style="width: 600px; height: 400px; margin: 0 auto">
-				<div id="container-speed" style="width: 300px; height: 200px; float: left"></div>
-				<div id="container-rpm" style="width: 300px; height: 200px; float: left"></div>
-			</div>
+			<script src="http://code.highcharts.com/modules/exporting.js"></script>
+			<div id="container-loudness-chart"></div>			
 		</th>
 	</tr>
 	</thead>
-	<tbody>
+	<tbody height=20%>
 	<tr>
-		<td>
-			<div id="votes">
+		<td width=50% height="50%">
+<!--  			<div id="votes" align="center">
 				<p>VOTE SPEED</p>
 					<form action="">
 						<input type="radio" name="vote" value="toofast">Too fast<br>
@@ -349,13 +503,25 @@
 						<input type="radio" name="vote" value="tooslow">Too slow<br>
 						<input type="submit" value="Submit">
 					</form>
+			</div> -->
+		</td>
+		<td width="50%">
+			<div id="pause_gauge" align="center">
+				<script src="http://code.highcharts.com/highcharts.js"></script>
+				<script src="http://code.highcharts.com/highcharts-more.js"></script>
+				
+				<script src="http://code.highcharts.com/modules/solid-gauge.src.js"></script>
+				
+				<div style="width: 600px; height: 400px; margin: 0 auto">
+					<div id="container-speed" style="width: 300px; height: 200px; float: left"></div>
+					<div id="container-rpm" style="width: 300px; height: 200px; float: left"></div>
+				</div>
 			</div>
 		</td>
-		<td>VOTE FORM</td>
 	</tr>
 	</tbody>
 </table>
 
 
     </body>
-</html>
+	</html>
