--- a/app/views/profSignIn.scala.html
+++ b/app/views/profSignIn.scala.html
@@ -63,8 +63,8 @@
 	</div>
 	<div style="margin-top:20px;"><input type="checkbox"> Remember Me  </div>
 	<div class="btn-group-justified" style="margin-top:20px;">
-		<a class="btn btn-success" type="button" id="signin">  Sign In  </a>
-		<a class="btn btn-default" role="button" href="/home">  Cancel  </a>
+		<a class="btn btn-success" type="submit" id="signin">  Sign In  </a>
+		<a class="btn btn-default" type="button" href="/home">  Cancel  </a>
 	</div>
 </div>
 </form>
