--- a/app/views/indexStudent.scala.html
+++ b/app/views/indexStudent.scala.html
@@ -4,80 +4,109 @@
 
 <title>Test</title>
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
- <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/bootstrap/css/bootstrap.css")">
 <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
 
 
 </head>
 <body>
-<div class="page-header" style="padding-bottom: 0px; margin-top:5px;">
-    		<img src="@routes.Assets.at("images/logo.png")" height="50px" width="150px" alt="Live Feed"> 
-    	</div> 
-    	<header class="navbar navbar-static-top bs-docs-nav"  id="top" role="banner">
-  			<div class="btn-group" style="float:right;">
-  				<a type="button" class="btn btn-default" href="/home">Home</a>
-  				<a type="button" class="btn btn-default" href="/aboutus">About Us</a>
-  				<a type="button" class="btn btn-default" href="/contact">Contact</a>
-  				<a type="button" class="btn btn-default" href="/feedback">Feedback</a>
-  			</div>
-		</header>
-
-<!-- @routes.Application.vote() -->
-	<div class="container">
-		<form id="speed_vote" method="get" action="/vote">
-			<div class="col-md-6 col-md-offset-2"">
-				<h3>Speed</h3>
-				<div class="row">
-					<label class="radio-inline"> <input name="radioGroup"
-						id="radio1" value="speed_low" type="radio">
-						LOW
-					</label>
-				</div>
-				<div class="row">
-					<label class="radio-inline"> <input name="radioGroup"
-						id="radio2" value="speed_ok" checked="checked" type="radio"> OK
-					</label>
-				</div>
-				<div class="row">
-					<label class="radio-inline"> <input name="radioGroup"
-						id="radio3" value="speed_fast" type="radio"> FAST
-					</label>
-				</div>
-				<button type="submit" class="btn btn-primary">Vote</button>
-			</div>
-		</form>
-
-		<form id="voice_vote" method="get" action="/vote">
-			<div class="col-md-6 col-md-offset-2"">
-				<h3>Voice</h3>
-				<div class="row">
-					<label class="radio-inline"> <input name="radioGroup"
-						id="radio4" value="voice_low" type="radio">
-						LOW
-					</label>
-				</div>
-				<div class="row">
-					<label class="radio-inline"> <input name="radioGroup"
-						id="radio5" value="voice_ok" checked="checked" type="radio"> OK
-					</label>
-				</div>
-				<div class="row">
-					<label class="radio-inline"> <input name="radioGroup"
-						id="radio6" value="voice_loud" type="radio"> LOUD
-					</label>
-				</div>
-				<button type="submit" class="btn btn-primary">Vote</button>
-			</div>
-		</form>
-		<form id="pause_vote" method="get" action="/vote">
-		<div class="col-md-6 col-md-offset-2" style="margin-top: 20px">
-			<button name="pause_vote" value="pause" type="submit" class="btn btn-primary">Want a Pause? :D</button>
-			</div>
-		</form>
-		
+	<div class="page-header" style="padding-bottom: 0px; margin-top: 5px;">
+		<img src="@routes.Assets.at("images/logo.png")" height="50px"
+			width="150px" alt="Live Feed">
 	</div>
+	<header class="navbar navbar-static-top bs-docs-nav" id="top"
+		role="banner">
+		<div class="btn-group" style="float: right;">
+			<a type="button" class="btn btn-default" href="/home">Home</a> <a
+				type="button" class="btn btn-default" href="/aboutus">About Us</a> <a
+				type="button" class="btn btn-default" href="/contact">Contact</a> <a
+				type="button" class="btn btn-default" href="/feedback">Feedback</a>
+		</div>
+	</header>
 
+	<!-- @routes.Application.vote() -->
+	<div class="container">
+		<div class="speed_container">
+			<form id="speed_vote" method="get" action="/vote">
+				<div class="col-md-6 col-md-offset-2">
+					<h3>Speed</h3>
+					<div class="row">
+						<label class="radio-inline"> <input name="radioGroup"
+							id="radio1" value="speed_low" type="radio"> LOW
+						</label>
+					</div>
+					<div class="row">
+						<label class="radio-inline"> <input name="radioGroup"
+							id="radio2" value="speed_ok" checked="checked" type="radio">
+							OK
+						</label>
+					</div>
+					<div class="row">
+						<label class="radio-inline"> <input name="radioGroup"
+							id="radio3" value="speed_fast" type="radio"> FAST
+						</label>
+					</div>
+					<button type="submit" class="btn btn-primary">Vote</button>
+				</div>
+			</form>
+		</div>
+		<div class="loudness_container">
+			<form id="voice_vote" method="get" action="/vote">
+				<div class="col-md-6 col-md-offset-2"">
+					<h3>Voice</h3>
+					<div class="row">
+						<label class="radio-inline"> <input name="radioGroup"
+							id="radio4" value="voice_low" type="radio"> LOW
+						</label>
+					</div>
+					<div class="row">
+						<label class="radio-inline"> <input name="radioGroup"
+							id="radio5" value="voice_ok" checked="checked" type="radio">
+							OK
+						</label>
+					</div>
+					<div class="row">
+						<label class="radio-inline"> <input name="radioGroup"
+							id="radio6" value="voice_loud" type="radio"> LOUD
+						</label>
+					</div>
+					<button type="submit" class="btn btn-primary">Vote</button>
+				</div>
+			</form>
+		</div>
+		<div class="pause_container">
+			<form id="pause_vote" method="get" action="/vote">
+				<div class="col-md-6 col-md-offset-2" style="margin-top: 20px">
+					<button name="pause_vote" value="pause" type="submit"
+						class="btn btn-primary">Want a Pause? :D</button>
+				</div>
+			</form>
+		</div>
+		
+		<div style="clear:both"></div>
+		<div>
+			<h2>Question Section</h2>
+			<form method="get" action="/postQuestion">
+
+				<div id="questions_row1" style="margin-left: 100px; height: 400px;">
+					<div id="posted_question"></div>
+
+					<div id="q_area" class="well col-sm-10">
+						<textarea class="form-control" rows="3" columns="50" id="question"
+							placeholder="Enter Question Here" name="p_question"></textarea>
+						<div class="btn-group-justified" style="margin-top: 20px;">
+							<!-- <a id="submit_button" class="btn btn-success" type="submit">Submit</a>
+						<a id="cancel_button" class="btn btn-danger" type="button">Cancel</a> -->
+							<button type="submit" class="btn btn-primary">Submit</button>
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
+
+
+	</div>
 
 </body>
 </html>
