--- a/app/views/mainPage.scala.html
+++ b/app/views/mainPage.scala.html
@@ -6,10 +6,33 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/bootstrap/css/bootstrap.css")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        <script type="text/javascript">
+        $(document).ready(function() {          
+        	  var i =0;
+        	  var images = ["@routes.Assets.at("images/munich.jpg")",
+        	                "@routes.Assets.at("images/munich1.jpg")",
+        	                "@routes.Assets.at("images/munich2.jpg")",
+        	                "@routes.Assets.at("images/munich3.jpg")"];
+        	  var image = $('.background');
+        	                //Initial Background image setup
+        	  image.attr('src', '@routes.Assets.at("images/munich1.jpg")');
+        	                //Change image at regular intervals
+        	   setInterval(function(){  
+        	   image.fadeOut(2000, function () {
+        	   image.attr('src', images [i++]);
+        	   image.fadeIn(2000);
+        	   });
+        	   if(i == images.length)
+        	    i = 0;
+        	  }, 5000);           
+        	 });
+        </script>
     </head>
     <body>
+    <img class="background" src="@routes.Assets.at("images/munich.jpg")" />
+    <div class="homepage">
         <div class="page-header" style="padding-bottom: 0px; margin-top:5px;">
-    		<img src="@routes.Assets.at("images/logo.png")" height="50px" width="150px" alt="Live Feed"> 
+    		<img src="@routes.Assets.at("images/logonew.png")" height="70px" width="150px" alt="Live Feed"> 
     	</div> 
     	<header class="navbar navbar-static-top bs-docs-nav"  id="top" role="banner">
   			<div class="btn-group" style="float:right;">
@@ -20,11 +43,12 @@
   			</div>
 		</header>
        <header class="navbar navbar-static-top bs-docs-nav"  id="top" role="banner">
-  		<div class="well btn-group" style="margin-left:400px;margin-top:100px">
+  		<div class="well btn-group" style="margin-left:70%;margin-top:100px">
   		<p><a type="button" class="btn btn-primary btn-lg btn-block" href="/profSignIn" style="width:200px;">Tutors</a></p>
-  		<p><a type="button" class="btn btn-primary btn-lg btn-block" href="/studentLogin" style="width:200px;">Students</a></p>
+  		<p><a type="button" class="btn btn-primary btn-lg btn-block" href="/indexStudent" style="width:200px;">Students</a></p>
   		</div>
 	</header>
+	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     </body>
 </html>
