--- a/app/views/profHome.scala.html
+++ b/app/views/profHome.scala.html
@@ -9,28 +9,28 @@
 <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
 
 <script>
-	$(document).ready(function() {
-		var connection = new WebSocket('ws://localhost:9000');
+$(document).ready(function() {
+	var connection = new WebSocket('ws://localhost:9000');
 
-		connection.onopen = function() {
-		}
+	connection.onopen = function() {
+	}
 
-		$("#create").click(function() {
-			$.post("/addCourse", {
-				courseName : $("#course").val()
-			})
-		});
-
-		
-		$("#cancel").click(function() {
-			$("#q_area").hide();
-		});
-
-		$("#addCourse").click(function() {
-			$("#q_area").show();
-		});
-
+	$("#create").click(function() {
+		$.post("/addCourse", {
+			courseName : $("#course").val()
+		})
 	});
+
+
+	$("#cancel").click(function() {
+		$("#q_area").hide();
+	});
+
+	$("#addCourse").click(function() {
+		$("#q_area").show();
+	});
+
+});
 </script>
 
 </head>
@@ -43,33 +43,30 @@
 		<header class="navbar navbar-static-top bs-docs-nav" id="top"
 			role="banner">
 			<div class="btn-group" style="float: right;">
-				<a type="button" class="btn btn-default" href="/home">Home</a> <a
-					type="button" class="btn btn-default" href="/aboutus">About Us</a>
+				<a type="button" class="btn btn-default" href="/home">Home</a> 
+				<a type="button" class="btn btn-default" href="/aboutus">About Us</a>
 				<a type="button" class="btn btn-default" href="/contact">Contact</a>
 				<a type="button" class="btn btn-default" href="/feedback">Feedback</a>
 			</div>
 		</header>
 
+		<form>
 		<div id="courses" >
 			@for(course <- courseList){
 			<div style="clear: both;">
-				
 				<div class="well" style="margin-left: 100px; width: 200px; float: left;">@course</div>
 				<div class="well" style="margin-left: 100px; width: 200px; float: left;">
-					<a type="button" class="btn btn-primary btn-group-justified"
-					id="addCourse">Add New Lecture</a>
+				<a type="button" class="btn btn-primary btn-group-justified" id="addLecture" href="/profPage?course=@course">Add New Lecture</a>
 				</div>
-				
 			</div>
 			}
 		</div>
-
+		</form>
 		
 		
 
 		<div class="well col-lg-4" style="margin-left: 100px; width: 200px;">
-			<a type="button" class="btn btn-primary btn-group-justified"
-				id="addCourse">Create New Course</a>
+			<a type="button" class="btn btn-primary btn-group-justified" id="addCourse">Create New Course</a>
 		</div>
 		<br>
 		<br>
@@ -77,8 +74,7 @@
 		<br>
 		<div id="q_area" class="well col-sm-10"
 			style="margin-left: 100px; width: 500px; display: none;">
-			<textarea class="form-control" rows="3" columns="50" id="course"
-				placeholder="Course Name"></textarea>
+			<textarea class="form-control" rows="3" columns="50" id="course" placeholder="Course Name"></textarea>
 			<div class="btn-group-justified" style="margin-top: 20px;">
 				<a type="button" class="btn btn-success" id="create">Submit</a> <a
 					type="button" class="btn btn-danger" id="cancel">Cancel</a>
