--- a/.target/views/profPage.scala.html
+++ b/.target/views/profPage.scala.html
@@ -15,28 +15,7 @@
 
 <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
 <script>
-/*
-	function getUrlVars()	
-		{
-    		var vars = [], hash;
-    		var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-    		for(var i = 0; i < hashes.length; i++)
-    			{
-        			hash = hashes[i].split('=');
-        			vars.push(hash[0]);
-        			vars[hash[0]] = hash[1];
-    			}
-    		return vars;
-		}
 
-	$("#logout").click(function() {
-		$.post("/postReport", {
-				
-				courseName: getUrlVars()["course"]
-		} )
-	});
-	
-*/
 	var speed_y;
 	var voice_y;
 	var newVal;
@@ -412,7 +391,7 @@
 													format : '<div style="text-align:center"><span style="font-size:25px;color:'
 															+ ((Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black')
 															+ '">{y}</span><br/>'
-															+ '<span style="font-size:12px;color:silver">Pause counts</span></div>'
+															+ '<span style="font-size:12px;color:silver">Pause Percentage</span></div>'
 												},
 												tooltip : {
 													valueSuffix : 'Number of persons voted for pause'
@@ -421,22 +400,16 @@
 
 										}));
 
-		// The RPM gauge
+		
 		;
-		//var newVal;
-		// Bring life to the dials
+		
 		setInterval(function() {
 
 			// Speed
 			var chart = $('#container-speed').highcharts();
 			if (chart) {
 				var point = chart.series[0].points[0];
-				//   inc = Math.round((Math.random() - 0.5) * 100);
-
-				// newVal = point.y + inc;
-				/*  if (newVal < 0 || newVal > 100) {
-				      newVal = point.y - inc;
-				  }*/
+				
 				console.log('pause 2: ' + newVal);
 				point.update(newVal);
 			}
