--- a/app/views/profPage.scala.html
+++ b/app/views/profPage.scala.html
@@ -69,6 +69,7 @@
 				p_question: $("#question").val()
 			}).done(function(){
 				$("#q_area").hide();
+				$('#question').val('');
 			})
 		});
 
